--- a/contrib/manual_provision/sql-secret.yaml
+++ b/contrib/manual_provision/sql-secret.yaml
@@ -7,4 +7,4 @@ data:
   sql_user: userreplace
   sql_password: passwordreplace
   sql_server: serverreplace
-  sql_dbname: mydrivingAnalyticsDB
+  sql_dbname: bXlkcml2aW5nREI=
